fix: adjust font sizes and line heights for improved readability

--- a/apps/website/src/app/styling/globals.css
+++ b/apps/website/src/app/styling/globals.css
@@ -1,11 +1,5 @@
 html {
-  font-size: 12px;
-  @media screen and (min-width: 500px) {
-    font-size: 14px;
-  }
-  @media screen and (min-width: 800px) {
-    font-size: 16px;
-  }
+  font-size: 16px;
 }
 body {
   --body-bg: #fff;
@@ -31,7 +25,7 @@ h3 {
   letter-spacing: -0.02rem;
 }
 p {
-  line-height: 1.65rem;
+  line-height: 1.9rem;
   font-weight: 200;
   font-size: 1rem;
 }
@@ -47,8 +41,11 @@ blockquote {
   line-height: 2rem;
   font-weight: 500;
   opacity: 0.85;
-  width: 85%;
+  width: 100%;
   letter-spacing: -0.05rem;
+  @media screen and (min-width: 500px) {
+    width: 85%;
+  }
 }
 
 .peekLogo {
